--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "sourceMap": true
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "jsx": "react"
   },
   "exclude": [
     "node_modules"
