--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
-    "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.7",
@@ -26,11 +25,12 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.12",
     "@mui/x-data-grid": "^6.0.1",
-    "@observablehq/plot": "^0.6.10",
+    "@observablehq/plot": "^0.6.13",
     "d3": "^7.8.2",
     "i": "^0.3.7",
     "npm": "^9.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.71.0"
   }
 }
